--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <li>прочитать книгу</li>
     </ul>
     <div id="menu">
-        <button data-action="addTaskBefore" id='addTaskBefore'>Добавить задачу в начало</button>
-        <button data-action="addTaskAfter" id='addTaskAfter'>Добавить задачу в конец</button>
-        <button data-action="deleteElements" id='deleteElements'>Удалить выбранные дела</button>
-        <button data-action="sortElements" id='sortElements'>Отсортировать список</button>
+        <button data-action="addTaskBefore">Добавить задачу в начало</button>
+        <button data-action="addTaskAfter">Добавить задачу в конец</button>
+        <button data-action="deleteElements">Удалить выбранные дела</button>
+        <button data-action="sortElements" id ='sort'>Отсортировать список</button>
     </div>
 
     <script src="main.js"></script>
